--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -18,7 +18,8 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:    
+    steps:  
+    - uses: actions/checkout@v1   
     - name: install
       run: make install
 
