--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "backend-project-lvl1",
   "version": "1.0.0",
   "description": "project with some simple math/braingames",
+  "keywords": [
+    "CLI games",
+    "math-games",
+    "brain-games",
+    "artithmetic-games"
+  ],
   "main": "src/index.js",
   "bin": {
     "brain-even": "bin/brain-even.js",
@@ -29,7 +35,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1"
   }
